# mxc-pallet

./: Cargo.toml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  command_helper.rs  rpc.rs  service.rs
pallets/members/: Cargo.toml
pallets/members/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
